--- a/oddo-frontend/package.json
+++ b/oddo-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
